--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "tsc ./src/**.ts"
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
