--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,53 @@
 version: 2
+
+defaults: &defaults
+  working_directory: ~/repo
+  docker:
+    - image: circleci/node:10.16.1
+
+
 jobs:
   build:
-    docker:
-      - image: circleci/node:10.16.1
+    <<: *defaults
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-
       - run: npm install
-      - run: npm test
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json }}
+      - run:
+        name: Transpiling to .js files
+        command: npm run build
+      
+      - persist_to_workspace:
+        root: ~/repo
+        paths: .
+  
+  test:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+        at: ~/repo
+      - run:
+        name: Testing
+        command: npm run test
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json }}
+
+workflows:
+  version: 2
+  test:
+    jobs:
+      - build
+      - test:
+        requires:
+          - build
