--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,11 +43,11 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json }}
 
-workflows:
-  version: 2
-  build-test:
-    jobs:
-      - build
-      - test:
-        requires:
-          - build
+# workflows:
+#   version: 2
+#   build-test:
+#     jobs:
+#       - build
+#       - test:
+#         requires:
+#           - build
