fix ci config 4

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,9 @@ jobs:
 
 workflows:
   version: 2
-  builds:
+  build:
     jobs:
       - build
+      - test:
+        requires:
+          - build
