--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "build": "tsc",
-    "deploy": "gh-pages -d docs"
+    "deploy": "node deploy-gh-pages.js"
   },
   "author": "",
   "license": "ISC",
