--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "gh-pages": "^2.2.0",
     "jest": "^25.1.0",
+    "shelljs": "^0.8.4",
     "typescript": "^3.8.3"
   }
 }
