--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "circleci-101",
-  "version": "1.0.8",
+  "version": "1.0.9-alpha.0",
   "description": "Learning to work with circleci",
   "main": "index.js",
   "scripts": {
