--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gh-pages": "^2.2.0",
     "jest": "^25.1.0",
     "shelljs": "^0.8.4",
+    "standard-version": "^8.0.2",
     "typescript": "^3.8.3"
   }
 }
